2019-10-16  Luis Machado  <luis.machado@linaro.org>

	* cp-gimplify.c: Fix reference to non-existing tree-gimple.c file.

2019-10-16  Jakub Jelinek  <jakub@redhat.com>

	* decl.c (cxx_maybe_build_cleanup): When clearing location of cleanup,
	if cleanup is a nop, clear location of its operand too.

2019-10-15  Nathan Sidwell  <nathan@acm.org>

	* class.c (build_clones): Break out of clone_function_decl.  Just
	build the clones.
	(clone_function_decl): Call build_clones, then maybe add them to
	the method vector.

	* class.c (build_clone): Refactor to clarify recursiveness.

2019-10-14  Jason Merrill  <jason@redhat.com>

	PR c++/91930 - ICE with constrained inherited default ctor.
	* name-lookup.c (do_class_using_decl): Set TYPE_HAS_USER_CONSTRUCTOR
	for inherited constructor.

2019-10-14  Paolo Carlini  <paolo.carlini@oracle.com>

	* decl.c (check_tag_decl): Use DECL_SOURCE_LOCATION.

2019-10-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92084
	* semantics.c (handle_omp_array_sections_1): Temporarily disable
	-fstrong-eval-order also for in_reduction and task_reduction clauses.

	* parser.c (cp_parser_omp_all_clauses): Change bool NESTED_P argument
	into int NESTED, if it is 2, diagnose missing commas in between
	clauses.
	(cp_parser_omp_context_selector): Pass 2 as last argument to
	cp_parser_omp_all_clauses.

2019-10-12  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_context_selector): Improve error recovery.
	For simd properties, put them directly into TREE_VALUE.
	(cp_finish_omp_declare_variant): Add "omp declare variant base"
	attribute rather than "omp declare variant".

2019-10-11  Marek Polacek  <polacek@redhat.com>

	PR c++/92049 - extra error with -fchecking=2.
	* pt.c (build_non_dependent_expr): Call fold_non_dependent_expr
	with tf_none.

2019-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	* typeck.c (cp_build_binary_op): Do not handle RROTATE_EXPR and
	LROTATE_EXPR.
	* constexpr.c (cxx_eval_constant_expression): Likewise.